[package]
name = "nt_unhooker"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
litcrypt = "0.3.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
winapi = { version = "0.3.9", features = ["libloaderapi", "winver", "memoryapi", "processthreadsapi"]}
windows = { version = "0.58.0", features = ["Win32_Storage_FileSystem"] }
reqwest = { version = "0.11", features = ["blocking"] }
ntapi = "0.4.1"